# R2R-reloaded

./: .gitignore  .mise.toml  SETUP.md
docker/: compose.full.yaml
py/: poetry.toml  pyproject.toml
py/core/configs/: ollama.toml
py/core/main/orchestration/hatchet/: ingestion_workflow.py
py/core/main/services/: graph_service.py
