[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "r2r"
version = "3.6.6"
description = "SciPhi R2R"
readme = "README.md"
license = "MIT"
authors = [
    "Owen Colegrove <owen@sciphi.ai>",
]
packages = [
    { include = "r2r" },
    { include = "sdk" },
    { include = "shared" },
    { include = "core" },
]
include = [
    "core/configs/*.toml",
    "core/providers/database/prompts/*.yaml",
    "r2r/r2r.toml",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiofiles = ">=24.1.0,<25.0.0"
alembic = ">=1.13.3,<2.0.0"
fastapi = ">=0.115.11,<0.116.0"
httpx = ">=0.27.0"
openai = ">=1.99.0"
python-dotenv = ">=1.0.1,<2.0.0"
psycopg-binary = ">=3.2.3,<4.0.0"
requests = ">=2.31.0,<3.0.0"
tiktoken = ">=0.8.0,<0.9.0"
toml = ">=0.10.2,<0.11.0"
types-requests = ">=2.31.0,<3.0.0"
types-aiofiles = ">=24.1.0.20240626,<25.0.0"
typing-extensions = ">=4.12.2,<5.0.0"
pydantic = ">=2.10.6"
python-json-logger = ">=3.2.1"
filetype = ">=1.2.0"

# Core dependencies (optional)
aiohttp = { version = ">=3.10.10,<4.0.0", optional = true }
aioshutil = { version = ">=1.5,<2.0", optional = true }
aiosqlite = { version = ">=0.20.0,<0.21.0", optional = true }
anthropic = { version = ">=0.49.0", optional = true }
apscheduler = { version = ">=3.10.4,<4.0.0", optional = true }
asyncpg = { version = ">=0.29.0,<0.30.0", optional = true }
azure-ai-inference = { version = ">=1.0.0b8,<2.0.0", optional = true }
azure-ai-ml = { version = ">=1.24.0,<2.0.0", optional = true }
bcrypt = { version = ">=4.1.3,<5.0.0", optional = true }
beautifulsoup4 = { version = ">=4.12.3,<5.0.0", optional = true }
boto3 = { version = ">=1.35.17,<2.0.0", optional = true }
colorlog = { version = ">=6.9.0,<7.0.0", optional = true }
docutils = { version = ">=0.21.2,<0.22.0", optional = true }
epub = { version = ">=0.5.2,<0.6.0", optional = true }
firecrawl-py = { version = ">=1.13.5", optional = true }
fsspec = { version = ">=2024.6.0,<2025.0.0", optional = true }
future = { version = ">=1.0.0,<2.0.0", optional = true }
google-auth = { version = ">=2.37.0,<3.0.0", optional = true }
google-auth-oauthlib = { version = ">=1.2.1,<2.0.0", optional = true }
google-genai = { version = ">=0.6.0,<0.7.0", optional = true }
gunicorn = { version = ">=21.2.0,<22.0.0", optional = true }
hatchet-sdk = { version = "==0.47.0", optional = true }
litellm = { version = ">=1.69.3", optional = true }
markdown = { version = ">=3.6,<4.0", optional = true }
mistralai = { version = ">=1.5.2", optional = true }
msg-parser = { version = ">=1.2.0", optional = true }
networkx = { version = ">=3.3,<4.0", optional = true }
numpy = { version = ">=1.22.4,<1.29.0", optional = true }
olefile = { version = ">=0.47,<0.48", optional = true }
ollama = { version = ">=0.3.1,<0.4.0", optional = true }
openpyxl = { version = ">=3.1.2,<4.0.0", optional = true }
orgparse = { version = ">=0.4.20231004,<0.5.0", optional = true }
pdf2image = { version = ">=1.17.0", optional = true }
pillow = { version = ">=11.1.0,<12.0.0", optional = true }
pillow-heif = { version = ">=0.21.0,<0.22.0", optional = true }
psutil = { version = ">=6.0.0,<7.0.0", optional = true }
pyjwt = { version = ">=2.8.0,<3.0.0", optional = true }
pynacl = { version = ">=1.5.0,<2.0.0", optional = true }
pypdf = { version = ">=4.2.0,<5.0.0", optional = true }
pypdf2 = { version = ">=3.0.1,<4.0.0", optional = true }
python-docx = { version = ">=1.1.0,<2.0.0", optional = true }
python-multipart = { version = ">=0.0.9,<0.0.19", optional = true }
python-pptx = { version = ">=1.0.1,<2.0.0", optional = true }
pyyaml = { version = ">=6.0.1,<7.0.0", optional = true }
sendgrid = { version = ">=6.11.0,<7.0.0", optional = true }
mailersend = { version = ">=0.5.6,<0.6.0", optional = true }
sentry-sdk = { version = ">=2.20.0,<3.0.0", optional = true }
sqlalchemy = { version = ">=2.0.30,<3.0.0", optional = true }
striprtf = { version = ">=0.0.28,<0.0.29", optional = true }
supabase = { version = ">=2.15.0,<3.0.0", optional = true }
tokenizers = { version = "==0.19", optional = true }
unstructured-client = { version = "==0.34.0", optional = true }
uvicorn = { version = ">=0.27.0.post1,<0.28.0", optional = true }
vecs = { version = ">=0.4.0,<0.5.0", optional = true }
xlrd = { version = ">=2.0.1,<3.0.0", optional = true }

[tool.poetry.extras]
core = [
    "aiohttp", "aioshutil", "aiosqlite", "anthropic", "apscheduler",
    "asyncpg", "azure-ai-inference", "azure-ai-ml", "bcrypt", "beautifulsoup4",
    "boto3", "colorlog", "docutils", "epub", "firecrawl-py", "fsspec",
    "future", "google-auth", "google-auth-oauthlib", "google-genai",
    "gunicorn", "hatchet-sdk", "litellm", "markdown", "mistralai",
    "msg-parser", "networkx", "numpy", "olefile", "ollama", "openpyxl",
    "orgparse", "pdf2image", "pillow", "pillow-heif", "psutil",
    "pyjwt", "pynacl", "pypdf", "pypdf2", "python-docx", "python-multipart",
    "python-pptx", "pyyaml", "sendgrid", "mailersend", "sentry-sdk",
    "sqlalchemy", "striprtf", "supabase", "tokenizers", "unstructured-client",
    "uvicorn", "vecs", "xlrd",
]

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
colorama = ">=0.4.6,<0.5.0"
mypy = ">=1.5.1,<2.0.0"
pre-commit = ">=2.9,<3.0"
pytest = ">=8.2.0,<9.0.0"
pytest-asyncio = ">=0.23.6,<0.24.0"
pytest-dependency = ">=0.6.0,<0.7.0"
pytest-mock = ">=3.14.0,<4.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
pytest-html = ">=4.1.1,<5.0.0"
types-toml = ">=0.10.8,<0.11.0"
pytest-xdist = ">=3.6.1,<4.0.0"
ruff = ">=0.9.6,<0.10.0"

[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
biopython = ">=1.85"
colorama = ">=0.4.6,<0.5.0"
firecrawl-py = ">=1.13.5"
numpy = ">=1.26.4"
pandas = ">=2.2.3"
scipy = ">=1.15.2"
simpy = ">=4.1.1"
statsmodels = ">=0.14.4"

[tool.poetry.scripts]
r2r-serve = "r2r.serve:run_server"

[tool.ruff]
exclude = ["py/tests/*"]
line-length = 79
target-version = "py310"
select = ["E", "F", "I", "B"]
ignore = ["B008", "B024", "B026", "E501", "F402", "F403", "F405", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
exclude = 'core/parsers/media/pyzerox/.*|playground/.*|deprecated/.*|dump/.*|docs/source|vecs/*|core/examples/*|sdk/examples/*|tests/*'

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=r2r --cov-report=term-missing --cov-report=xml --cache-clear"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]